Post-vote notify me form

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -175,7 +175,7 @@
 								<a href="{{idea.permalink}}" class="title_of_tee">
 									{{idea.title | truncate: 25}}
 								</a>
-								<span class="name_of_designer">John C.</span>
+								<span class="name_of_designer">{{idea.user.nickname}}</span>
 							</p>
 							<a href="#" class="grey_button">
 								Buy Tee
@@ -192,7 +192,7 @@
 					{% for idea in rusic.most_liked_ideas limit:6 %}			              
 						<div class="small_thumb">
 							<a href="{{idea.permalink}}">
-								<img src="{{idea.images.first.thumb}}" alt="{{idea.title}} Tee" />
+								<img src="{{idea.images.first.square}}" alt="{{idea.title}} Tee" />
 								<span class="title_of_tee">{{idea.title | truncate: 13}}</span>
 							</a>
 						</div><!-- end of .small_thumb -->
@@ -206,7 +206,7 @@
 					{% for idea in rusic.ideas limit:6 %}
 						<div class="small_thumb">
 							<a href="{{idea.permalink}}">
-								<img src="{{idea.images.first.thumb}}" alt="{{idea.title}} Tee" />
+								<img src="{{idea.images.first.square}}" alt="{{idea.title}} Tee" />
 								<span class="title_of_tee">{{idea.title | truncate: 13}}</span>
 							</a>
 						</div><!-- end of .small_thumb -->
@@ -234,47 +234,12 @@
 		
 	</div><!-- end #facebook_twitter_login -->
 
-  <div id="winning_design_subscription" class="none">
-    <!-- Begin MailChimp Signup Form -->
-    <div id="mc_embed_signup">
-      <form action="{{notify_subscribe_url}}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate target="_blank">
-      	<h2>Notify me if this design wins</h2>
-      	<p class="error none">Oops! Please correct the following fields:</p>
-        <div class="mc-field-group">
-        	<label for="mce-EMAIL">Email Address</label>
-        	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-        </div>
-        <div class="mc-field-group none">
-        	<label for="mce-NICKNAME">Name</label>
-        	<input type="text" value="{{current_user.nickname}}" name="NICKNAME" class="required" id="mce-NICKNAME">
-        </div>
-        <div class="mc-field-group size1of2 none">
-        	<label for="mce-IDEAID">TeeZilla Entry ID</label>
-        	<input type="number" name="IDEAID" class="required" value="{{idea.id}}" id="mce-IDEAID">
-        </div>
-        <div class="mc-field-group none">
-        	<label for="mce-PROVIDER">Provider</label>
-        	<input type="text" value="{{current_user.provider}}" name="PROVIDER" class="required" id="mce-PROVIDER">
-        </div>
-      	<div id="mce-responses" class="clear">
-      		<div class="response" id="mce-error-response" style="display:none"></div>
-      		<div class="response" id="mce-success-response" style="display:none"></div>
-      	</div>
-      	<div class="clear">
-      	  <input type="submit" value="Notify me" name="subscribe" id="mc-embedded-subscribe" class="button big_red_button">
-      	</div>
-      </form>
-    </div>
-
-    <!--End mc_embed_signup-->
-  </div>
-	
 	<div id="facebook_twitter_vote_form" class="none">
 		<form id="vote_form" method="post" action="#">
 			<p>
 				Login with Facebook or Twitter and Vote for the Tee: 
 			</p>
-			<h3>Big Monkey Head</h3>
+			<h3>{{idea.title}}</h3>
 			
 			<div class="fancybox_facebook_login_wrap clearfix">
 				<a href="/users/auth/facebook" class="facebook_blue">Login with Facebook</a>
@@ -283,6 +248,23 @@
 		</form>
 		
 	</div><!-- end #facebook_twitter_vote_form -->
+	
+	<div id="winning_design_subscription" class="none">
+    <form action="/user" method="post" id="winning_design_subscription_form" data-user-has-email-address="{{current_user.has_email_address?}}" name="winning_design_subscription_form" class="validate" novalidate>
+    	<input type="hidden" name="_method" value="put">
+    	<h2>Thanks for voting!</h2>
+    	<p>If you want us to notify you if this design wins,<br />enter your email address below:</p>
+    	<p class="error none">Oops! Please correct the following fields:</p>
+      <div class="mc-field-group">
+      	<label for="user_email">Email Address</label>
+      	<input type="email" value="" name="user[email]" class="required email" id="user_email">
+      </div>
+
+    	<div class="clear">
+    	  <input type="submit" value="Notify me" name="subscribe" id="mc-embedded-subscribe" class="button big_red_button">
+    	</div>
+    </form>
+	</div>
 	
 	<div id="footer_rail">
     	<div id="footer_content" class="clearfix">
