--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -899,7 +899,7 @@ h2.box_title span {
 #large_tee_col img {
   border: 2px solid #333;
   width: 412px;
-  height: 412px;
+  /* height: 412px; */
 }
 
 #main_details_col {
@@ -1413,19 +1413,19 @@ div.idea-expired div#main_details_col {
   padding-top: 60px;
 }
 
-form#mc-embedded-subscribe-form div.mc-field-group,
-form#mc-embedded-subscribe-form input[type=submit] {
+form#winning_design_subscription_form div.mc-field-group,
+form#winning_design_subscription_form input[type=submit] {
   margin-bottom: 15px;
   float: left;
 }
-form#mc-embedded-subscribe-form label {
+form#winning_design_subscription_form label {
   line-height: 30px;
 }
-form#mc-embedded-subscribe-form input[type=submit].big_red_button {
+form#winning_design_subscription_form input[type=submit].big_red_button {
   font-size: 16px;
   width: 116px;
 }
-form#mc-embedded-subscribe-form input[type=email].error {
+form#winning_design_subscription_form input[type=email].error {
   display: inline !important;
   width: 268px !important;
   margin: 0;
