--- a/ideas/index.html.liquid
+++ b/ideas/index.html.liquid
@@ -1,38 +1,38 @@
 <div class="block_wrapper clearfix with_expander_button">
-	
-	<h1 class="box_title"><span>Teezilla Tees are only made by your votes.</span><span class="homepage_title_pointer"><!-- IE Fix --></span></h1>
-	<br class="clrb" />
-	
-	{% if rusic.ideas != empty %}
-	  <div id="entries">
-	    {% paginate rusic.ideas by 9 %}
-  	    {% for idea in paginate %}
-    	    <div class="large_thumb" id="idea-{{idea.uuid}}">
-      			<a href="{{idea.permalink}}">
-      				<span class="vote_status_wrapper" title="Number of votes">{{idea.likes}}</span>
-      				<span class="vote_now_prompt">Vote for design &gt;</span>
-      				<img src="{{idea.images.first.medium_square}}" alt="{{idea.title}}" />
-      				<span class="title_of_tee">
-      					{{ idea.title | truncate: 17 }}
-      				</span>
-      			</a>
-      			<p>
-      				<span class="name_of_designer">{{idea.user.nickname}}</span>
-      			</p>
-      		</div><!-- end .large_thumb -->
-    		{% endfor %}
-  		{% endpaginate %}
-	  </div>
-	{% else %}
-	  <p>
-			Sorry there are no Tee Designs to view yet. <a href="#entry_form" class="simple_login">Start us off by uploading your own Tee Design now!</a>
-	  </p>
-	{% endif %}
 
-	<div id="see_more_tees_button_wrap">
-		<a href="#" class="lnkViewMore grey_button">
-			See more Tees
-		</a>
-	</div>
-		
+  <h1 class="box_title"><span>Teezilla Tees are only made by your votes.</span><span class="homepage_title_pointer"><!-- IE Fix --></span></h1>
+  <br class="clrb" />
+
+  {% if space.ideas != empty %}
+    <div id="entries">
+      {% paginate space.ideas by 9 %}
+        {% for idea in paginate %}
+          <div class="large_thumb" id="idea-{{idea.uuid}}">
+            <a href="{{idea.permalink}}">
+              <span class="vote_status_wrapper" title="Number of votes">{{idea.likes}}</span>
+              <span class="vote_now_prompt">Vote for design &gt;</span>
+              <img src="{{idea.images.first.medium_square}}" alt="{{idea.title}}" />
+              <span class="title_of_tee">
+                {{ idea.title | truncate: 17 }}
+              </span>
+            </a>
+            <p>
+              <span class="name_of_designer">{{idea.user.nickname}}</span>
+            </p>
+          </div><!-- end .large_thumb -->
+        {% endfor %}
+      {% endpaginate %}
+    </div>
+  {% else %}
+    <p>
+      Sorry there are no Tee Designs to view yet. <a href="#entry_form" class="simple_login">Start us off by uploading your own Tee Design now!</a>
+    </p>
+  {% endif %}
+
+  <div id="see_more_tees_button_wrap">
+    <a href="#" class="lnkViewMore grey_button">
+      See more Tees
+    </a>
+  </div>
+
 </div><!-- end .block_wrapper -->
