--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -8,41 +8,41 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta http-equiv="content-language" content="en" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="content-language" content="en" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>
-		{% if idea %}
-			{{idea.title}} &middot; {{space.title}}
-		{% else %}
-			{{space.title}}
-		{% endif %}
-	</title>
-  <meta name="description" content="" /> 
+  <title>
+    {% if idea %}
+      {{idea.title}} &middot; {{space.title}}
+    {% else %}
+      {{space.title}}
+    {% endif %}
+  </title>
+  <meta name="description" content="" />
   <meta name="author" content="" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   {{content_for_header}}
 
-	<link href="{{asset_url}}/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" type="text/css" href="{{asset_url}}/javascripts/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
-	<!--[if lte IE 8]><link href="{{asset_url}}/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
-	
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js" type="text/javascript"></script>
-	<script src="{{asset_url}}/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
+  <link href="{{asset_url}}/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="{{asset_url}}/javascripts/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
+  <!--[if lte IE 8]><link href="{{asset_url}}/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js" type="text/javascript"></script>
+  <script src="{{asset_url}}/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js" type="text/javascript"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js" type="text/javascript"></script>
-  
+
   <script src="{{asset_url}}/javascripts/libs/jquery.form.js" type="text/javascript"></script>
   <script src="{{asset_url}}/javascripts/libs/jquery.validate.min.js" type="text/javascript"></script>
 
-	<script src="{{asset_url}}/javascripts/application.js" type="text/javascript"></script>
+  <script src="{{asset_url}}/javascripts/application.js" type="text/javascript"></script>
 
 </head>
 
 <body>
-  
+
   <div id="fb-root"></div>
   <script>
     window.fbAsyncInit = function() {
@@ -72,215 +72,215 @@
       document.getElementById('fb-root').appendChild(e);
     }());
   </script>
-  
-	<div id="header_rail">
-    	<div id="header_content" class="clearfix">
-        	<a href="{{space.permalink}}" id="main_logo">
-        		Teezil.la Website
-        	</a>
 
-			<ul id="main_nav">
-				<li><a href="{{space.permalink}}">Voting<span>Get Voting Now</span></a></li>
-				<li><a href="#">Shop<span>Buy Winning Tees</span></a></li>
-				<li class="last red_nav">
-				  {% if current_user %}
-				    <a href="/ideas/new" class="simple_login">
-				  {% else %}
-				    <a href="#login_form" class="simple_login">
-				  {% endif %}
-				    Submit Your Design
-				    <span>
-				      Upload your Tee design to Win
-				    </span>
-				  </a>
-				</li>
-			</ul>
+  <div id="header_rail">
+      <div id="header_content" class="clearfix">
+          <a href="{{space.permalink}}" id="main_logo">
+            Teezil.la Website
+          </a>
+
+      <ul id="main_nav">
+        <li><a href="{{space.permalink}}">Voting<span>Get Voting Now</span></a></li>
+        <li><a href="#">Shop<span>Buy Winning Tees</span></a></li>
+        <li class="last red_nav">
+          {% if current_user %}
+            <a href="/ideas/new" class="simple_login">
+          {% else %}
+            <a href="#login_form" class="simple_login">
+          {% endif %}
+            Submit Your Design
+            <span>
+              Upload your Tee design to Win
+            </span>
+          </a>
+        </li>
+      </ul>
 
 
-			<div id="main_arrow"><!-- IE Fix --></div>
+      <div id="main_arrow"><!-- IE Fix --></div>
 
- 		</div><!-- #header_content end -->
+    </div><!-- #header_content end -->
     </div><!-- #header_rail end -->
 
-    
-	<div id="main_rail">
-    	<div id="main_content" class="clearfix">
-			<div id="main_right_col">
-				  
-				  {% if error %}
-				    <div class="flash error">
-				      {{ error }}
-				    </div>
-				  {% endif %}
-				  
-				  {% if alert %}
-				    <div class="flash notice">
-				      {{ alert }}
-				    </div>
-				  {% endif %}
-				  
-				  {% if notice %}
-  				  <div class="flash success">
-  			      {{ notice }}
-  			    </div>
-				  {% endif %}
-				  
+
+  <div id="main_rail">
+      <div id="main_content" class="clearfix">
+      <div id="main_right_col">
+
+          {% if error %}
+            <div class="flash error">
+              {{ error }}
+            </div>
+          {% endif %}
+
+          {% if alert %}
+            <div class="flash notice">
+              {{ alert }}
+            </div>
+          {% endif %}
+
+          {% if notice %}
+            <div class="flash success">
+              {{ notice }}
+            </div>
+          {% endif %}
+
           <!-- This will be replace with the template content -->
-	     		{{ yield }}
+          {{ yield }}
 
-    		</div><!-- end #main_right_col -->
-			
-			<div id="main_left_col">
-        	
-				<div class="block_wrapper">
-					<h2>How to take part:</h2>
-					<ol>
-						<li>Login with your Facebook or Twitter account</li>
-						<li>Click &ldquo;Submit your design&rdquo;</li>
-						<li>Upload your design</li>
-						<li>Vote on other people's designs and share your own</li>
-					</ol>
-					
-				</div><!-- end .block_wrapper -->
-				
-				<div id="sidebar-sign-in" class="block_wrapper">
-				  {% if current_user %}
-				    <h2>Hey {{current_user.nickname}}!</h2>
-				    <p>
-				      You're signed in. <a href="/logout">Sign out</a>
-				    </p>
-				  {% else %}
-				    <h2>Sign in to vote &amp; submit your design.</h2>
-				    <p>
-  				    <a href="/users/auth/facebook" class="facebook_grey">Sign in with Facebook</a>
-				    </p>
-				    <p>
-				      <a href="/users/auth/twitter" class="twitter_grey">Sign in with Twitter</a>
-				    </p>
-				  {% endif %}
-				</div>
-				
-				<div class="block_wrapper">
-					<h3>Last Week's Winner</h3>
-					
-					{% for idea in space.ideas | limit:1 %}	
-						<div class="medium_thumb clearfix">
-							<a href="{{idea.permalink}}">
-								<img src="{{idea.images.first.square}}" alt="Kreepy Kat Tee" />
-							</a>
-							<p>
-								<a href="{{idea.permalink}}" class="title_of_tee">
-									{{idea.title | truncate: 25}}
-								</a>
-								<span class="name_of_designer">{{idea.user.nickname}}</span>
-							</p>
-							<a href="#" class="grey_button">
-								Buy Tee
-							</a>
-						
-						</div><!-- end .medium_thumb -->
-					 {% endfor %}
-				</div><!-- end .block_wrapper -->
-				
-				
-				<div class="block_wrapper clearfix">
-					<h3>Most popular Tees</h3>
-					
-					{% for idea in space.most_liked_ideas limit:6 %}			              
-						<div class="small_thumb">
-							<a href="{{idea.permalink}}">
-								<img src="{{idea.images.first.square}}" alt="{{idea.title}} Tee" />
-								<span class="title_of_tee">{{idea.title | truncate: 11}}</span>
-							</a>
-						</div><!-- end of .small_thumb -->
-		            {% endfor %}
+        </div><!-- end #main_right_col -->
 
-				</div><!-- end .block_wrapper -->
+      <div id="main_left_col">
+
+        <div class="block_wrapper">
+          <h2>How to take part:</h2>
+          <ol>
+            <li>Login with your Facebook or Twitter account</li>
+            <li>Click &ldquo;Submit your design&rdquo;</li>
+            <li>Upload your design</li>
+            <li>Vote on other people's designs and share your own</li>
+          </ol>
+
+        </div><!-- end .block_wrapper -->
+
+        <div id="sidebar-sign-in" class="block_wrapper">
+          {% if current_user %}
+            <h2>Hey {{current_user.nickname}}!</h2>
+            <p>
+              You're signed in. <a href="/logout">Sign out</a>
+            </p>
+          {% else %}
+            <h2>Sign in to vote &amp; submit your design.</h2>
+            <p>
+              <a href="/auth/facebook" class="facebook_grey">Sign in with Facebook</a>
+            </p>
+            <p>
+              <a href="/auth/twitter" class="twitter_grey">Sign in with Twitter</a>
+            </p>
+          {% endif %}
+        </div>
+
+        <div class="block_wrapper">
+          <h3>Last Week's Winner</h3>
+
+          {% for idea in space.ideas | limit:1 %}
+            <div class="medium_thumb clearfix">
+              <a href="{{idea.permalink}}">
+                <img src="{{idea.images.first.square}}" alt="Kreepy Kat Tee" />
+              </a>
+              <p>
+                <a href="{{idea.permalink}}" class="title_of_tee">
+                  {{idea.title | truncate: 25}}
+                </a>
+                <span class="name_of_designer">{{idea.user.nickname}}</span>
+              </p>
+              <a href="#" class="grey_button">
+                Buy Tee
+              </a>
+
+            </div><!-- end .medium_thumb -->
+           {% endfor %}
+        </div><!-- end .block_wrapper -->
 
 
-				<div class="block_wrapper clearfix">
-					<h3>Latest Tees</h3>
-					{% for idea in space.ideas limit:6 %}
-						<div class="small_thumb">
-							<a href="{{idea.permalink}}">
-								<img src="{{idea.images.first.square}}" alt="{{idea.title}} Tee" />
-								<span class="title_of_tee">{{idea.title | truncate: 11}}</span>
-							</a>
-						</div><!-- end of .small_thumb -->
-					{% endfor %}
-				</div><!-- end .block_wrapper -->
+        <div class="block_wrapper clearfix">
+          <h3>Most popular Tees</h3>
+
+          {% for idea in space.most_liked_ideas limit:6 %}
+            <div class="small_thumb">
+              <a href="{{idea.permalink}}">
+                <img src="{{idea.images.first.square}}" alt="{{idea.title}} Tee" />
+                <span class="title_of_tee">{{idea.title | truncate: 11}}</span>
+              </a>
+            </div><!-- end of .small_thumb -->
+                {% endfor %}
+
+        </div><!-- end .block_wrapper -->
 
 
-			
-				
-        	</div><!-- end #main_left_col -->
-			
-		</div><!-- #main_content end -->
-	</div><!-- #main_rail end -->
+        <div class="block_wrapper clearfix">
+          <h3>Latest Tees</h3>
+          {% for idea in space.ideas limit:6 %}
+            <div class="small_thumb">
+              <a href="{{idea.permalink}}">
+                <img src="{{idea.images.first.square}}" alt="{{idea.title}} Tee" />
+                <span class="title_of_tee">{{idea.title | truncate: 11}}</span>
+              </a>
+            </div><!-- end of .small_thumb -->
+          {% endfor %}
+        </div><!-- end .block_wrapper -->
 
-	<div id="facebook_twitter_login_form" class="none">
-		<form id="login_form" method="post" action="#">
-			<p>
-				Please Login with Facebook or Twitter: 
-			</p>
-			<div class="fancybox_facebook_login_wrap clearfix">
-				<a href="/users/auth/facebook" class="facebook_blue">Login with Facebook</a>
-				<a href="/users/auth/twitter" class="twitter_blue">Login with Twitter</a>
-			</div><!-- end #fancybox_facebook_login_wrap -->
-		</form>
-		
-	</div><!-- end #facebook_twitter_login -->
 
-	<div id="facebook_twitter_vote_form" class="none">
-		<form id="vote_form" method="post" action="#">
-			<p>
-				Login with Facebook or Twitter and Vote for the Tee: 
-			</p>
-			<h3>{{idea.title}}</h3>
-			
-			<div class="fancybox_facebook_login_wrap clearfix">
-				<a href="/users/auth/facebook" class="facebook_blue">Login with Facebook</a>
-				<a href="/users/auth/twitter" class="twitter_blue">Login with Twitter</a>
-			</div><!-- end #fancybox_facebook_login_wrap -->
-		</form>
-		
-	</div><!-- end #facebook_twitter_vote_form -->
-	
-	<div id="winning_design_subscription" class="none">
+
+
+          </div><!-- end #main_left_col -->
+
+    </div><!-- #main_content end -->
+  </div><!-- #main_rail end -->
+
+  <div id="facebook_twitter_login_form" class="none">
+    <form id="login_form" method="post" action="#">
+      <p>
+        Please Login with Facebook or Twitter:
+      </p>
+      <div class="fancybox_facebook_login_wrap clearfix">
+        <a href="/auth/facebook" class="facebook_blue">Login with Facebook</a>
+        <a href="/auth/twitter" class="twitter_blue">Login with Twitter</a>
+      </div><!-- end #fancybox_facebook_login_wrap -->
+    </form>
+
+  </div><!-- end #facebook_twitter_login -->
+
+  <div id="facebook_twitter_vote_form" class="none">
+    <form id="vote_form" method="post" action="#">
+      <p>
+        Login with Facebook or Twitter and Vote for the Tee:
+      </p>
+      <h3>{{idea.title}}</h3>
+
+      <div class="fancybox_facebook_login_wrap clearfix">
+        <a href="/auth/facebook" class="facebook_blue">Login with Facebook</a>
+        <a href="/auth/twitter" class="twitter_blue">Login with Twitter</a>
+      </div><!-- end #fancybox_facebook_login_wrap -->
+    </form>
+
+  </div><!-- end #facebook_twitter_vote_form -->
+
+  <div id="winning_design_subscription" class="none">
     <form action="/user" method="post" id="winning_design_subscription_form" data-user-has-email-address="{{current_user.has_email_address?}}" name="winning_design_subscription_form" class="validate" novalidate>
-    	<input type="hidden" name="_method" value="put">
-    	<h2>Thanks for voting!</h2>
-    	<p>If you want us to notify you if this design wins,<br />enter your email address below:</p>
-    	<p class="error none">Oops! Please correct the following fields:</p>
+      <input type="hidden" name="_method" value="put">
+      <h2>Thanks for voting!</h2>
+      <p>If you want us to notify you if this design wins,<br />enter your email address below:</p>
+      <p class="error none">Oops! Please correct the following fields:</p>
       <div class="mc-field-group">
-      	<label for="user_email">Email Address</label>
-      	<input type="email" value="" name="user[email]" class="required email" id="user_email">
+        <label for="user_email">Email Address</label>
+        <input type="email" value="" name="user[email]" class="required email" id="user_email">
       </div>
 
-    	<div class="clear">
-    	  <input type="submit" value="Notify me" name="subscribe" id="mc-embedded-subscribe" class="button big_red_button">
-    	</div>
+      <div class="clear">
+        <input type="submit" value="Notify me" name="subscribe" id="mc-embedded-subscribe" class="button big_red_button">
+      </div>
     </form>
-	</div>
-	
-	<div id="footer_rail">
-    	<div id="footer_content" class="clearfix">
-        	
-			<div id="top_share_icons_wrap">
-				<a href="#share-on-facebook" class="lnkShareFacebook facebook_grey">Share on Facebook</a>
-				<a href="http://twitter.com/share?text=I'm checking out TeeZilla!&amp;count=none&amp;via=TeeZilla&amp;related=rusicHQ" class="lnkShareTwitter twitter_grey">Share on Twitter</a>
-			</div>
-			
-			<p><a href="#">Teezilla</a> is built and maintained with by <a href="http://www.simpleweb.co.uk" target="_blank">Simpleweb</a>, the realtime digital agency &copy;2011  </p>
+  </div>
 
-			
+  <div id="footer_rail">
+      <div id="footer_content" class="clearfix">
+
+      <div id="top_share_icons_wrap">
+        <a href="#share-on-facebook" class="lnkShareFacebook facebook_grey">Share on Facebook</a>
+        <a href="http://twitter.com/share?text=I'm checking out TeeZilla!&amp;count=none&amp;via=TeeZilla&amp;related=rusicHQ" class="lnkShareTwitter twitter_grey">Share on Twitter</a>
+      </div>
+
+      <p><a href="#">Teezilla</a> is built and maintained with by <a href="http://www.simpleweb.co.uk" target="_blank">Simpleweb</a>, the realtime digital agency &copy;2011  </p>
+
+
         </div><!-- #footer_content end -->
     </div><!-- #footer_rail end -->
 
 
 
   <script type="text/javascript">
-    var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]]; // Change UA-XXXXX-X to be your site's ID 
+    var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]]; // Change UA-XXXXX-X to be your site's ID
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
     g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
     s.parentNode.insertBefore(g,s)}(document,"script"));
