Sign out link fix

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -147,7 +147,7 @@
           {% if current_user %}
             <h2>Hey {{current_user.nickname}}!</h2>
             <p>
-              You're signed in. <a href="/logout">Sign out</a>
+              You're signed in. <a href="/auth/signout">Sign out</a>
             </p>
           {% else %}
             <h2>Sign in to vote &amp; submit your design.</h2>
