copyright year updated and added description meta

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -19,7 +19,7 @@
       {{space.title}}
     {% endif %}
   </title>
-  <meta name="description" content="" />
+  <meta name="description" content="{{space.summary}}" />
   <meta name="author" content="" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -271,7 +271,7 @@
         <a href="http://twitter.com/share?text=I'm checking out TeeZilla!&amp;count=none&amp;via=TeeZilla&amp;related=rusicHQ" class="lnkShareTwitter twitter_grey">Share on Twitter</a>
       </div>
 
-      <p><a href="#">Teezilla</a> is built and maintained with by <a href="http://www.simpleweb.co.uk" target="_blank">Simpleweb</a>, the realtime digital agency &copy;2011  </p>
+      <p><a href="#">Teezilla</a> is <a href="http://rusic.com" title="link to Rusic">powered by Rusic</a> &copy;2012  </p>
 
 
         </div><!-- #footer_content end -->
