--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -53,7 +53,7 @@
         var name = $("h1.entry_box span").text();
         FB.ui({
           method: 'feed',
-          name: 'Go Ape! Share your Adventures',
+          name: 'TeeZilla',
           link: window.location.href,
           picture: $("div#large_tee_col img").attr("src"),
           caption: name,
