--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -138,6 +138,7 @@
             <li>Login with your Facebook or Twitter account</li>
             <li>Click &ldquo;Submit your design&rdquo;</li>
             <li>Upload your design</li>
+            <li>You've got 14 days to get as many votes as you can</li>
             <li>Vote on other people's designs and share your own</li>
           </ol>
 
