added links to shopify store

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -81,7 +81,7 @@
 
       <ul id="main_nav">
         <li><a href="{{space.permalink}}" title="link to TeeZilla voting">Voting<span>Get Voting Now</span></a></li>
-        <li><a href="#" title="link to tee shop">Shop<span>Buy Winning Tees</span></a></li>
+        <li><a href="http://teezilla.myshopify.com/" title="link to TeeZilla shop">Shop<span>Buy Winning Tees</span></a></li>
         <li class="last red_nav">
           {% if current_user %}
             <a href="/ideas/new" title="add a new entry" class="simple_login">
@@ -175,7 +175,7 @@
                 </a>
                 <span class="name_of_designer">{{idea.user.nickname}}</span>
               </p>
-              <a href="#" title="link to buy {{idea.title}} tee" class="grey_button">
+              <a href="http://teezilla.myshopify.com/collections/latest-tshirts" title="link to buy {{idea.title}} tee" class="grey_button">
                 Buy Tee
               </a>
 
