added login lightbox and favicon

--- a/ideas/show.html.liquid
+++ b/ideas/show.html.liquid
@@ -16,10 +16,11 @@
             Vote Now!
           </a>
         {% else %}
-          <a href="#vote_form" class="login to like this tee" class="big_red_button simple_login">
+          <a id="inline" href="#lightbox-sign-in" class="big_red_button">
             Vote Now!
           </a>
         {% endif %}
+  
 
         <div id="details_share_icons_wrap">
           <p style="margin-bottom: 4px;">Share on:</p>
