--- a/ideas/show.html.liquid
+++ b/ideas/show.html.liquid
@@ -24,7 +24,7 @@
 
         <div id="details_share_icons_wrap">
           <p style="margin-bottom: 4px;">Share on:</p>
-          <a href="#share-on-facebook" title="Share this tee on Facebook" class="lnkShareFacebook facebook_grey">Facebook</a>
+          <a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]={{idea.title}}&amp;p[summary]={{idea.content}}&amp;p[url]={{idea.permalink}}&amp;&amp;p[images][0]={{idea.images.first.medium_large}}','sharer','toolbar=0,status=0,width=650,height=325');" href="javascript: void(0)" class="facebook_grey">Facebook</a>
           <a href="http://twitter.com/share?text=Vote for {{idea.title}} on TeeZilla!&amp;count=none&amp;via=TeeZilla&amp;related=rusicHQ" title="Share this tee on Twitter" class="lnkShareTwitter twitter_grey">Twitter</a>
 
 
