--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -105,6 +105,11 @@
         <li class="last red_nav">
           {% if current_user %}
             <a href="/ideas/new" title="add a new entry" class="simple_login">
+              Submit Your Design
+              <span>
+                Upload your Tee design to Win
+              </span>
+            </a>
           {% else %}
             <a id="inline" href="#lightbox-sign-in" class="simple_login">
             Submit Your Design
