added voting ended text to exired entry

--- a/ideas/expired.html.liquid
+++ b/ideas/expired.html.liquid
@@ -24,10 +24,7 @@
 				</p>
 				
 				<p class="days-remaining" data-days="0">
-					<span class="days_to_vote_title">Days left to vote:</span>
-					<span class="days_to_vote hundreds">0</span>
-					<span class="days_to_vote tens">0</span>
-					<span class="days_to_vote units">0</span>
+					<span class="days_to_vote_title">Voting for this tee has ended!</span>
 				</p>
 				
 			</div><!-- end #main_details_col -->
