added overlay to expired entry

--- a/ideas/expired.html.liquid
+++ b/ideas/expired.html.liquid
@@ -5,6 +5,8 @@
 		<div id="details_wrap">
 			<div id="large_tee_col">
 				<span class="vote_status_wrapper" title="Number of votes">{{ idea.likes }}</span>
+				
+				<div class="expired-overlay"><span class="middle">voting for this tee had ended!</span></div>
 				<img src="{{idea.images.first.medium_large}}" alt="{{idea.title}}" />
 			
 			</div><!-- end #large_tee_col -->
