--- a/ideas/expired.html.liquid
+++ b/ideas/expired.html.liquid
@@ -6,7 +6,7 @@
 			<div id="large_tee_col">
 				<span class="vote_status_wrapper" title="Number of votes">{{ idea.likes }}</span>
 				
-				<div class="expired-overlay"><span class="middle">voting for this tee had ended!</span></div>
+				<div class="expired-overlay"><span class="middle">voting for this tee has ended!</span></div>
 				<img src="{{idea.images.first.medium_large}}" alt="{{idea.title}}" />
 			
 			</div><!-- end #large_tee_col -->
