--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -873,12 +873,14 @@ h2.box_title span {
 
 #details_wrap {
   padding: 35px 0 0 0;
+  clear: left;
 }
 
 #large_tee_col {
   float: left;
   width: 418px;
   position: relative;
+  clear: left;
 }
 
 #large_tee_col .vote_status_wrapper {
@@ -1465,13 +1467,15 @@ text-align: center;
 color: #EEE;
 font-size: 2em;
 font-family: 'PacificoRegular', serif;
-display: inline;
+display: block;
 }
 .middle {
 display: block;
 position: absolute;
 width: 100%;
+*width: 410px;
 bottom: 25px;
+left: 0;
 text-align: center;
 text-shadow: 0px 1px 3px #000000;
 filter: dropshadow(color=#000000, offx=0, offy=1);
