--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -64,34 +64,6 @@
 <body>
 
   <div id="fb-root"></div>
-  <script>
-    window.fbAsyncInit = function() {
-      FB.init({appId: '', status: true, cookie: true,
-        xfbml: true});
-
-      $(".lnkShareFacebook").click(function() {
-        var name = $("h1.entry_box span").text();
-        FB.ui({
-          method: 'feed',
-          name: 'TeeZilla',
-          link: window.location.href,
-          picture: $("div#large_tee_col img").attr("src"),
-          caption: name,
-          // description: "",
-          message: "Vote for " + name + " with Teezilla!"
-        }, function(response) {
-          window.console && console.log(response);
-        });
-        return false;
-      });
-    };
-    (function() {
-      var e = document.createElement('script'); e.async = true;
-      e.src = document.location.protocol +
-      '//connect.facebook.net/en_US/all.js';
-      document.getElementById('fb-root').appendChild(e);
-    }());
-  </script>
 
   <div id="header_rail">
       <div id="header_content" class="clearfix">
@@ -312,9 +284,9 @@
 
       <div id="top_share_icons_wrap">
         {% if idea %}
-        <a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]={{idea.title}}&amp;p[summary]={{idea.content}}&amp;p[url]={{idea.permalink}}&amp;&amp;p[images][0]={{idea.images.first.medium_large}}','sharer','toolbar=0,status=0,width=650,height=325');" href="javascript: void(0)" class="facebook_grey">Facebook</a>
+        <a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]={{idea.title}}&amp;p[summary]={{idea.content}}&amp;p[url]={{idea.permalink}}&amp;&amp;p[images][0]={{idea.images.first.medium_large}}','sharer','toolbar=0,status=0,width=650,height=325');" href="javascript: void(0)" class="facebook_grey">Share on Facebook</a>
         {% else %}
-        <a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]={{space.title}}&amp;p[summary]={{space.summary}}&amp;p[url]={{space.permalink}}&amp;&amp;p[images][0]={{ space.ideas.first.images.first.square}}','sharer','toolbar=0,status=0,width=650,height=325');" href="javascript: void(0)" class="facebook_grey">Facebook</a>
+        <a onClick="window.open('http://www.facebook.com/sharer.php?s=100&amp;p[title]={{space.title}}&amp;p[summary]={{space.summary}}&amp;p[url]={{space.permalink}}&amp;&amp;p[images][0]={{space.ideas.first.images.first.square}}','sharer','toolbar=0,status=0,width=650,height=325');" href="javascript: void(0)" class="facebook_grey">Share on Facebook</a>
         {% endif %}
         
         <a href="http://twitter.com/share?text=I'm checking out TeeZilla!&amp;count=none&amp;via=TeeZilla&amp;related=rusicHQ" title="Share this page on Twitter" class="lnkShareTwitter twitter_grey">Share on Twitter</a>
