updated sidebar copy

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -133,10 +133,15 @@
           <h2>How to take part:</h2>
           <ol>
             <li>Login with your Facebook or Twitter account</li>
-            <li>Click &ldquo;Submit your design&rdquo;</li>
-            <li>Upload your design</li>
-            <li>You've got 14 days to get as many votes as you can</li>
-            <li>Vote on other people's designs and share your own</li>
+            <li>Vote on the designs that you like</li>
+          </ol>
+          
+          <h2>Feeling Arty? £200?</h2>
+          <ol>
+            <li>Login with your Facebook or Twitter account</li>
+            <li>Submit your own design</li>
+            <li>Get as many votes as possible in 14 days</li>
+            <li>Every month the design with the most votes wins £200</li>
           </ol>
 
         </div><!-- end .block_wrapper -->
