small copy edit for sidebar

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -136,7 +136,7 @@
             <li>Vote on the designs that you like</li>
           </ol>
           
-          <h2>Feeling Arty? £200?</h2>
+          <h2>Feeling arty? £200?</h2>
           <ol>
             <li>Login with your Facebook or Twitter account</li>
             <li>Submit your own design</li>
