fixed social sharing URL

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -27,14 +27,14 @@
   {% if idea %}
     <meta property="og:title" content="{{ idea.title }}"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:url" content="http://goape.rusic.com{{ idea.permalink }}"/>
+    <meta property="og:url" content="http://teezilla.rusic.com{{ idea.permalink }}"/>
     <meta property="og:image" content="{{idea.images.first.square}}"/>
     <meta property="og:site_name" content="{{space.title}}"/>
     <meta property="og:description" content="{{ idea.content }}" />
   {% else %}
     <meta property="og:title" content="{{space.title}}"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:url" content="http://goape.rusic.com/"/>
+    <meta property="og:url" content="http://teezilla.rusic.com/"/>
     <meta property="og:image" content="{{ space.ideas.first.images.first.square}}"/>
     <meta property="og:site_name" content="{{space.title}}"/>
     <meta property="og:description" content="{{space.summary}}" />
