copy change week to month

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -164,7 +164,7 @@
         </div>
 
         <div class="block_wrapper">
-          <h3>Last Week's Winner</h3>
+          <h3>Last Month's Winner</h3>
           <p>Coming soon!</p>
 
           <!--
