--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -3,7 +3,7 @@
 {% elsif env == 'staging' %}
   {% assign asset_url='http://teezilla.s3.amazonaws.com' %}
 {% else %}
-  {% assign asset_url='http://localhost:8080' %}
+  {% assign asset_url='http://teezilla-assets' %}
 {% endif %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -64,8 +64,19 @@
 <body>
 
   <div id="fb-root"></div>
-
+    
   <div id="header_rail">
+    
+      <div id="support-topbar">
+        <ul>
+          <li class="about"><a id="inline" href="#teezilla-about">About TeeZilla</a></li>
+          <li><a href="http://teezilla.myshopify.com/" title="link to TeeZilla shop">Buy the Tee's</a></li>
+          <li><a href="{{space.permalink}}">FAQs</a></li>
+          <li><a href="{{space.permalink}}">Support</a></li>
+          <li><a id="inline" href="#teezilla-terms">Terms &amp; conditions</a></li>
+        </ul>
+      </div>
+    
       <div id="header_content" class="clearfix">
           <a href="{{space.permalink}}" id="main_logo">
             Teezil.la Website
@@ -283,6 +294,37 @@
     </div>
   </div>
   {% endunless %}
+  
+  <!-- About Teezilla -->
+  <div style="display:none">
+    <div id="teezilla-about" class="htmlbox">
+      <h1>About Teezilla</h1>
+      <p>Teezilla is a site where anyone with an idea can join up, submit their designs and be in with a chance of winning £200, then get their teeshirt design printed.</p>
+      <p>The idea of Teezilla has been formed by a partnership between web company Simpleweb, based on the Bristol Harbourside and ex record producer and entrepreneur Neal Slateford.</p>
+      <p>Teezilla invites you to join up and submit as many teeshirt designs as you like.  The designs are then exhibited on the site for 14 days.  In this time other users can log in and ‘like’ their favorite designs through Facebook and / or Twitter, as well as leaving comments. At the end of every month the tee with the most likes wins £200 and the teeshirt gets printed.</p>
+      <p>Cast your votes or submit and design now and join the Teezilla community.</p>
+    </div>
+  </div>
+  
+  <!-- Terms & Conditions -->
+  <div style="display:none">
+    <div id="teezilla-terms" class="htmlbox">
+      <h1>Terms &amp; Conditions</h1>
+      <ol class="terms">
+        <li>Teezilla acknowledges that the Illustrator is first and sole owner of all “copyright” and shall retain intellectual rights of all Illustration(s).</li>
+        <li>The winner upon payment in full of £200 prize money, shall grant Teezilla unlimited rights for winning design and shall transfer ownership of high resolution scans of the illustrations to Teezilla for 12 months.</li>
+        <li>Illustrator is entitled to use all Illustrations for self promotion purposes or to enter into any contest, unless cited as a winner in which case Royalty Free Rights will be signed to Teezilla for 12 months.</li>
+        <li>Reassigning of Rights: Teezilla may not assign or transfer this Licence or any part thereof unless authorised in writing by Illustrator.</li>
+        <li>No modifications, changes or alterations may be made to Illustrations or any part thereof, directly or indirectly, without Illustrator’s prior written consent.</li>
+        <li>Credit: Teezilla agrees to include a credit to Illustrator in connection with the Work.</li>
+        <li>Illustrator’s Copies: Teezilla shall furnish Illustrator with one copy of the Work upon publication.</li>
+        <li>Terms become effective upon the signing of the agreement.</li>
+        <li>Voting window: Every entry gets 14 days for votes. At the end of a month the entry with the most votes in a complete 14 day cycle is the winner. If the cycle isn't complete it carries into the next month.</li>
+        <li>An entry can not win 2 months in a row unless it is re-entered.</li>
+        <li>Users of Teezilla warrant that the material submitted is not obscene, offensive, defamatory of any person or otherwise illegal; and, agree not to post material which is deliberately intended to upset other users.</li>
+      </ol>
+    </div>
+  </div>
 
   <div id="footer_rail">
       <div id="footer_content" class="clearfix">
