--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -177,27 +177,22 @@
 
         <div class="block_wrapper">
           <h3>Last Month's Winner</h3>
-          <p>Coming soon!</p>
 
-          <!--
-          {% for idea in space.ideas | limit:1 %}
             <div class="medium_thumb clearfix">
-              <a href="{{idea.permalink}}">
-                <img src="{{idea.images.first.square}}" alt="{{idea.title}}" />
+              <a href="http://teezilla.myshopify.com/collections/latest-tshirts" title="link to Joshua K. Marshall's tee in the Teezilla store">
+                <img src="{{asset_url}}/images/winners/march12.png" alt="Motubu aka" />
               </a>
               <p>
-                <a href="{{idea.permalink}}" title="link to {{idea.title}}" class="title_of_tee">
-                  {{idea.title | truncate: 25}}
+                <a href="http://teezilla.myshopify.com/collections/latest-tshirts" title="link to #'s tee in the Teezilla store" class="title_of_tee">
+                  Motubu aka
                 </a>
-                <span class="name_of_designer">{{idea.user.nickname}}</span>
+                <span class="name_of_designer">by Joshua K. Marshall</span>
               </p>
               <a href="http://teezilla.myshopify.com/collections/latest-tshirts" title="link to buy {{idea.title}} tee" class="grey_button">
                 Buy Tee
               </a>
 
             </div>
-           {% endfor %}
-           -->
 
         </div><!-- end .block_wrapper -->
 
