--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -180,7 +180,7 @@
 
             <div class="medium_thumb clearfix">
               <a href="http://teezilla.myshopify.com/collections/latest-tshirts" title="link to Joshua K. Marshall's tee in the Teezilla store">
-                <img src="{{asset_url}}/images/winners/march12.png" alt="Motubu aka" />
+                <img src="{{asset_url}}/images/winner_march12.png" alt="Motubu aka" />
               </a>
               <p>
                 <a href="http://teezilla.myshopify.com/collections/latest-tshirts" title="link to #'s tee in the Teezilla store" class="title_of_tee">
