Removed FAQs link

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -72,8 +72,7 @@
           <li class="about"><a id="inline" href="#teezilla-about">About Teezilla</a></li>
           <li><a href="http://teezilla.myshopify.com/" title="link to TeeZilla shop">Buy the Tee's</a></li>
           <li><a href="http://www.facebook.com/pages/TeeZilla/269323539774090" title="link to Teezilla on Facebook">Teezilla on Facebook</a></li>
-          <li><a href="http://teezilla.rusic.com/teezilla-support/ideas/2035" title="link to Teezilla FAQ's">FAQs</a></li>
-          <li><a href="http://teezilla.rusic.com/teezilla-support" title="link to Teezilla support community">Support</a></li>
+          <li><a href="http://teezilla.rusic.com/teezilla-support" title="link to Teezilla support community" class="active">Support &amp; FAQs</a></li>
           <li><a id="inline" href="#teezilla-terms">Terms &amp; conditions</a></li>
         </ul>
       </div>
