Added terms checkbox

--- a/ideas/new.html.liquid
+++ b/ideas/new.html.liquid
@@ -40,7 +40,10 @@
 				<input type="checkbox" id="idea_should_post_to_social" name="idea[should_post_to_social]" class="checkbox" checked="checked" />
 			</div>
 			
-			
+			<div class="input clearfix">
+				<label for="aggreement_accept" class="checkbox">I have read and accept the <a href="http://teezilla.myshopify.com/pages/terms-conditions" title="link to the Teezilla terms & conditions">Terms &amp; Conditions.</a> </label>
+				<input type="checkbox" id="aggreement_accept" name="aggreement_accept" class="checkbox" />
+			</div>
 			
 			<div class="input clearfix">
 				<input type="submit" value="Submit your design" class="big_red_button" />
